fix: remove backdrop filter and transition from equipment card for improved performance fix: adjust sticky navigation position for better visibility on scroll

--- a/src/styles/components/equipment_card.scss
+++ b/src/styles/components/equipment_card.scss
@@ -60,8 +60,6 @@
       min-height: 100px;
       height: max-content;
       padding: 1.25rem;
-      backdrop-filter: blur(16px);
-      transition: backdrop-filter 0.3s ease;
       flex-shrink: 0;
       @include bg-image;
     }
