--- a/src/styles/section/block_mini_navigation_sticky.scss
+++ b/src/styles/section/block_mini_navigation_sticky.scss
@@ -3,7 +3,7 @@
 
 .mini-nav-sticky {
   position: sticky;
-  top: 0;
+  top: calc(100vh - 80px);
   width: 100%;
   height: 80px;
   z-index: 100;
